# exercicios-edb1-u1

./: CMakeLists.txt  README.md  author.md  q13.cpp  q14.cpp  q4.cpp  q6.cpp  q7.cpp  q8.cpp
questao-1/: q1.cpp
questao-10/: q10.cpp
questao-12/: q12.cpp
questao-13/: q13.cpp
questao-14/: q14.cpp  q5.cpp
questao-4/: q4.cpp
questao-6/: q6.cpp
questao-8/: q8.cpp
